--- a/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
+++ b/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
@@ -133,6 +133,13 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Scene.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="PlatformerBFG.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
