--- a/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj.filters
+++ b/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Actor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PlatformerBFG.rc">
