--- a/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
+++ b/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
@@ -135,15 +135,19 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="InputProvider.h" />
     <ClInclude Include="KeyListner.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="PhysicsActor.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PlatformerBFG.rc" />
