--- a/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
+++ b/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CollisionActor.cpp" />
     <ClCompile Include="InputProvider.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="CollisionActor.h" />
     <ClInclude Include="InputProvider.h" />
     <ClInclude Include="KeyListner.h" />
     <ClInclude Include="Map.h" />
