--- a/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
+++ b/PlatformerBFG/PlatformerBFG/PlatformerBFG.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="CollisionActor.cpp" />
     <ClCompile Include="InputProvider.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -142,14 +143,17 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="CollisionActor.h" />
+    <ClInclude Include="GameConstans.h" />
     <ClInclude Include="InputProvider.h" />
     <ClInclude Include="KeyListner.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="PhysicsActor.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="Updatable.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PlatformerBFG.rc" />
